# shadeset

./: HISTORY.rst  MANIFEST.in  README.md  README.rst  env_maya2020.bat  env_maya2022.bat  export.py  mtlib.py  pyproject.toml  setup.cfg  setup.py  shadeset_lite.py  userSetup.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: wayfarer_BLK_dark.v001.yml
shadeset/: __init__.py  api.py  attributes.py  callbacks.py  config.py  contextmanagers.py  decorators.py  lib.py  library.py  materials.py  models.py  pat.py  tools.py  utils.py
shadeset/legacy/: README.md  models.py  renderlayers.py  utils.py
shadeset/ui/: widgets.py  window.py
shadeset/ui/res/: __init__.py  style.css
tests/: __init__.py  __main__.py  conftest.py  test_shadeset.py  test_shadeset_lite.py
tests/data/: base_scene.mb  layers_scene.mb  noshaders_scene.mb
tests/data/testset/: shadeset.yml
tests/data/testset/shaders/: blinn1.mb  phong1.mb  phongE1.mb  rampShader1.mb  surfaceShader1.mb
