[metadata]
name = shadeset
author = Dan Bradham
author-email = dan@brandnewschool.com
summary = Autodesk Maya scene shading exporter
description-file = README.rst
home-page = https://github.com/nybrandnewschool/shadeset.git
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    Autodesk Maya
[files]
packages = shadeset
[bdist_wheel]
universal = 1
